# fret-trainer

./: .gitignore  README.md  fret.py  fret_trainer.py  pyproject.toml  requirement.md
.github/workflows/: release.yml
scripts/: release.py
